Fix padding on mobile

--- a/_sass/_07_layout.scss
+++ b/_sass/_07_layout.scss
@@ -386,3 +386,9 @@ div.ydw {
 .pr5  { padding-right: 5px !important; }
 .pr10 { padding-right: 10px !important; }
 .pr20 { padding-right: 20px !important; }
+
+
+/* Richard's funky overrides */
+div.row {
+    padding: 0 10px;
+}
